tests/error/comptime/allocation5.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		__builtin_comptime_free(foo());
	});
}
